Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/UndefinedStruct.ru
/? Descripción: caso de prueba que verifica que se haya declarado el
/? struct de la clase
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 8 | COLUMNA 6 | EL STRUCT NO ESTA DEFINIDO

impl A{
.(){}}
start{}